# rust-auth-system

./: Cargo.toml  README.md  command_.txt
.sqlx/: query-3ef9e02179a63f6e93685e88515cfd2acf3a1c55a2ecc46ab9ea0212574decdd.json
.sqlx_db/: db.sqlite
database/migrations/: 20250701111247_create_users_table.sql
migrations/: 20260305215031_create_users_table.sql
src/: main.rs
src/auth/: handlers.rs  mod.rs  models.rs  service.rs  utils.rs
