[package]
name = "axum-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres","sqlite","uuid", "chrono"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[profile.dev]
opt-level = "s"      # мега оптимизация по размеру
lto = true           # link-time optimization
codegen-units = 16

[profile.release]
opt-level = "z"           
lto = true                # полная LTO
codegen-units = 1         # максимум оптимизации
strip = "symbols"         # удаляет все символы
debug = false
debug-assertions = false

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[profile.blazing]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false